# colombia-unemployment-dashboard

./: .env.template  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
colombia-unemployment-dashboard-master/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
colombia-unemployment-dashboard-master/.streamlit/: config.toml
colombia-unemployment-dashboard-master/src/dashboard/: app.py
colombia-unemployment-dashboard-master/src/dashboard/assets/: style.css
colombia-unemployment-dashboard-master/src/dashboard/pages/: __init__.py
colombia-unemployment-dashboard-master/src/data/: __init__.py
colombia-unemployment-dashboard-master/src/etl/: pipeline.py  transform.py
colombia-unemployment-dashboard-master/tests/test_analysis/: __init__.py
scripts/: download_data.py  run_pipeline.py  update_data.py
src/: __init__.py
src/analysis/: __init__.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py
src/dashboard/utils/: __init__.py
src/etl/: __init__.py  extract_geih.py  pipeline.py  transform.py
src/utils/: decorators.py  logging_config.py  paths.py
tests/: __init__.py  conftest.py  smoke_test.py  test_utils.py
tests/test_dashboard/: __init__.py
tests/test_etl/: __init__.py
